# efl

./: meson.build
cmakeconfig/: meson.build
dbus-services/: meson.build
doc/: meson.build
header_checks/: meson.build
src/benchmarks/eo/: meson.build
src/bindings/: meson.build
src/bindings/mono/: meson.build
src/edje_external/: meson.build
src/examples/edje/: meson.build
src/lib/edje/: meson.build
src/lib/eeze/: meson.build
src/lib/efl_canvas_wl/: meson.build
src/lib/efreet/: meson.build
src/lib/eina/: eina_file_posix.c  meson.build
src/lib/elementary/: meson.build
src/lib/emile/: meson.build
src/lib/evas/: meson.build
src/static_libs/buildsystem/: meson.build
src/static_libs/lz4/: meson.build
src/tests/efl_mono/: meson.build
src/tests/eina/: eina_test_abi.c  eina_test_accessor.c  eina_test_array.c  eina_test_barrier.c  eina_test_benchmark.c  eina_test_bezier.c  eina_test_binbuf.c  eina_test_binshare.c  eina_test_clist.c  eina_test_convert.c  eina_test_counter.c  eina_test_cow.c  eina_test_crc.c  eina_test_error.c  eina_test_file.c  eina_test_fp.c  eina_test_freeq.c  eina_test_hash.c  eina_test_inarray.c  eina_test_inlist.c  eina_test_iterator.c  eina_test_lalloc.c  eina_test_list.c  eina_test_lock.c  eina_test_log.c  eina_test_magic.c  eina_test_main.c  eina_test_matrix.c  eina_test_matrixsparse.c  eina_test_mempool.c  eina_test_module.c  eina_test_quadtree.c  eina_test_quaternion.c  eina_test_rbtree.c  eina_test_rectangle.c  eina_test_sched.c  eina_test_simple_xml_parser.c  eina_test_slice.c  eina_test_slstr.c  eina_test_str.c  (+10 more)
src/tests/elua/: meson.build
src/wayland_protocol/: meson.build
systemd-services/: meson.build
(+10 files in other folders)
